# mlops-a4-fraud-detection

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements-inference.txt  requirements-train.txt
.github/workflows/: build.yml  cd.yml  ci.yml  (+1 more)
artifacts/: deployed_model.pkl  train_summary.json
ci_cd/: trigger_kfp_run.py  wait_and_check_auc.py
compiled_pipelines/: fraud_pipeline.yaml  fraud_pipeline_drift.yaml
data/: generate_fraud_dataset.py
docker/: Dockerfile.inference  Dockerfile.training
experiments/: make_charts.py  run_cost_sensitive_compare.py  run_drift_simulation.py  run_imbalance_compare.py  run_local.py  run_models_compare.py  run_retraining_compare.py  run_shap_explainability.py
grafana/: dashboard_data_drift.json  dashboard_model_performance.json  dashboard_system_health.json
k8s/: grafana_dashboards.yaml  grafana_dashboards_cm.yaml  inference.yaml  namespace.yaml  persistent_volume.yaml  prometheus_grafana.yaml  resource_quota.yaml
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
report/: REPORT.md
results/: task2_imbalance.json  task3_models.json  task4_cost_sensitive.json  task7_drift.json  task8_retraining.json  task9_shap.json
screenshots/: 01_k8s_environment.txt  02_imbalance_summary.txt  03_models_summary.txt  04_cost_sensitive_summary.txt  05_cicd_summary.txt  07_drift_summary.txt  08_retraining_summary.txt  09_shap_summary.txt
scripts/: load_gen.py  render_cicd_evidence.py  render_pipeline_graph.py  train_and_export.py
src/: Dockerfile.base  compile_all.py
tests/: test_components.py  test_data_schema.py
(+12 files in other folders)
